--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="box_stoke_color">#9BA3A6</color>
     <color name="button_gray_color">#909FA3</color>
+    <color name="green">#2A832D</color>
+    <color name="gray">#646363</color>
 </resources>
