--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -267,6 +267,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/btn_favourite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
