--- a/app/src/main/res/layout/custom_bestsellers.xml
+++ b/app/src/main/res/layout/custom_bestsellers.xml
@@ -32,7 +32,8 @@
             android:textColor="@color/black"
             android:fontFamily="@font/robotomono_medium"
             android:textSize="12sp"
-            android:layout_marginHorizontal="@dimen/_8sdp"/>
+            android:layout_marginTop="@dimen/_5sdp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,7 +43,7 @@
             android:fontFamily="@font/robotomono_regular"
             android:layout_marginTop="@dimen/_5sdp"
             android:textSize="10sp"
-            android:layout_marginHorizontal="@dimen/_8sdp"/>
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
